Implement quickening; prepare implementation of boxing elimination.